--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
   <script src="app/bower_components/angular/angular.js"></script>
   <script src="app/bower_components/angular-route/angular-route.js"></script>
   <script src="app/bower_components/moment/min/moment.min.js"></script>
+  <script src="app/js/angular-locale_it-it.js"></script>
   <script src="app/js/app.js"></script>
 </body>
 </html>
